Ensure filters are aligned on devises

--- a/app/assets/stylesheets/filters.scss
+++ b/app/assets/stylesheets/filters.scss
@@ -13,6 +13,12 @@
   padding-bottom: 8px;
 }
 
+.bk-filters__option {
+  padding-right: 10px !important;
+  padding-left: 10px !important;
+  min-width: 85px;
+}
+
 a.bk-filters__option {
   color: #333;
   opacity: 0.7;
